[package]
name = "rss_registry"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "RSS-Registry"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
eframe = { version = "0.27", features = ["wgpu"] }
egui_extras = "0.27"
image = { version = "0.24", default-features = false, features = ["ico"] }
regex = "1"
thiserror = "1"
winreg = "0.52"
once_cell = "1"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Time",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell"
] }

[build-dependencies]
winres = "0.1"
